# CodingAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SPEC.md  pyproject.toml  requirements-sandbox.txt  todo.md
src/devagent/: __init__.py  cli.py
src/devagent/agents/: __init__.py  dispatcher.py  editor.py  executor.py  pr_bot.py  reflector.py  retriever.py  verifier.py
src/devagent/core/: __init__.py  graph.py  llm.py  state.py
src/devagent/tools/: __init__.py  core_tools.py
tests/: __init__.py  test_cli.py
